# arbitrage-engine

./: .gitignore  CMakeLists.txt  README.md
include/arb/core/: types.hpp
include/arb/utils/: clock.hpp  memory_pool.hpp  ring_buffer.hpp
rtl/: comparator.v  price_level.v
